# manga_updater

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/commands/: add.rs  export.rs  fix_urls.rs  import.rs  list.rs  mod.rs  open.rs  remove.rs  restore.rs  undo.rs  unread.rs  update.rs
src/file_ops/: mod.rs  save.rs  write_file.rs
src/file_reader/: mod.rs
src/manga_chapters/: mod.rs
src/models/: mod.rs
src/scraper/: mod.rs
src/utils/: mod.rs
tests_resources/: false_testpage.html  testpage.html
