[package]
name = "manga_updater"
version = "0.6.10"
authors = ["Yvan Sanson <sansonyvan@gmail.com>"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour = "0.7.0"
csv = "1.2.1"
futures = "0.3.28"
open = "4.1.0"
reqwest = { version = "0.11.17" }
scraper = "0.16.0"
serial_test = "2.0.0"
structopt = "0.3.26"
text_io = "0.1.12"
tokio = { version = "1.28.0", features = ["full"] }
