[package]
name = "manga_updater"
version = "0.7.1"
authors = ["Yvan Sanson <sansonyvan@gmail.com>"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
futures = "0.3.28"
open = "5.0.0"
owo-colors = "3.5.0"
reqwest = { version = "0.11.20" }
scraper = "0.17.1"
serial_test = "2.0.0"
structopt = "0.3.26"
text_io = "0.1.12"
tokio = { version = "1.32.0", features = ["full"] }
